--- a/views/user/document_hub/client_index_detail.twig
+++ b/views/user/document_hub/client_index_detail.twig
@@ -1,58 +1,100 @@
 {% extends 'user/master.twig' %}
 {% block content %}
+    <style>
+        .filepond--credits{
+            display: none !important;
+        }
+    </style>
     <link rel="stylesheet" href="https://unpkg.com/filepond/dist/filepond.css">
     <link rel="stylesheet" href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css">
     <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
-    <div class="toolbar" id="kt_toolbar">
-        <div id="kt_toolbar_container" class="container-fluid d-flex flex-stack">
-            <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
-                <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Document Hub</h1>
+        <div class="toolbar" id="kt_toolbar">
+            <div id="kt_toolbar_container" class="container-fluid d-flex flex-stack">
+                <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
+                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Document Hub</h1>
+                </div>
             </div>
         </div>
-    </div>
 
 
-    <div class="post d-flex flex-column-fluid" id="kt_post">
-        <div id="kt_content_container" class="container-fluid">
-            <div class="card">
-                <div class="card-body">
-                    <div class="d-flex flex-column flex-xl-row p-7">
-                        <div class="flex-lg-row-fluid me-xl-15 mb-20 mb-xl-0">
-                            <div class="mb-0">
-                                <form method="post" action="#" class="form mb-15">
-                                    <div class="position-relative">
-                                        <!--begin::Svg Icon | path: icons/duotune/general/gen021.svg-->
-                                        <span class="svg-icon svg-icon-1 svg-icon-primary position-absolute top-50 translate-middle ms-9">
-																<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-																	<rect opacity="0.5" x="17.0365" y="15.1223" width="8.15546" height="2" rx="1" transform="rotate(45 17.0365 15.1223)" fill="currentColor" />
-																	<path d="M11 19C6.55556 19 3 15.4444 3 11C3 6.55556 6.55556 3 11 3C15.4444 3 19 6.55556 19 11C19 15.4444 15.4444 19 11 19ZM11 5C7.53333 5 5 7.53333 5 11C5 14.4667 7.53333 17 11 17C14.4667 17 17 14.4667 17 11C17 7.53333 14.4667 5 11 5Z" fill="currentColor" />
-																</svg>
-															</span>
-                                        <!--end::Svg Icon-->
-                                        <input type="text" class="form-control form-control-lg form-control-solid ps-14" name="search" id="search" placeholder="Search" />
+        <div class="post d-flex flex-column-fluid" id="kt_post">
+            <div id="kt_content_container" class="container-fluid">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex flex-column flex-xl-row p-7">
+                            <div class="flex-lg-row-fluid me-xl-15 mb-20 mb-xl-0">
+                                <div class="mb-0">
+                                    <!--begin::Heading-->
+                                    <div class="d-flex align-items-center mb-12">
+                                        {% if documentHub[0].status == 'yes' %}
+                                        <span class="svg-icon svg-icon-4qx ms-n2 me-3 svg-icon-success">
+															<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+																<path opacity="0.3" d="M19 22H5C4.4 22 4 21.6 4 21V3C4 2.4 4.4 2 5 2H14L20 8V21C20 21.6 19.6 22 19 22ZM11.7 17.7L16 14C16.4 13.6 16.4 12.9 16 12.5C15.6 12.1 15.4 12.6 15 13L11 16L9 15C8.6 14.6 8.4 14.1 8 14.5C7.6 14.9 8.1 15.6 8.5 16L10.3 17.7C10.5 17.9 10.8 18 11 18C11.2 18 11.5 17.9 11.7 17.7Z" fill="currentColor"></path>
+																<path d="M10.4343 15.4343L9.25 14.25C8.83579 13.8358 8.16421 13.8358 7.75 14.25C7.33579 14.6642 7.33579 15.3358 7.75 15.75L10.2929 18.2929C10.6834 18.6834 11.3166 18.6834 11.7071 18.2929L16.25 13.75C16.6642 13.3358 16.6642 12.6642 16.25 12.25C15.8358 11.8358 15.1642 11.8358 14.75 12.25L11.5657 15.4343C11.2533 15.7467 10.7467 15.7467 10.4343 15.4343Z" fill="currentColor"></path>
+																<path d="M15 8H20L14 2V7C14 7.6 14.4 8 15 8Z" fill="currentColor"></path>
+															</svg>
+														</span>
+                                        {% else %}
+                                            <span class="svg-icon svg-icon-4qx ms-n2 me-3 svg-icon-danger">
+                                                                   <svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+																	<path opacity="0.3" d="M19 22H5C4.4 22 4 21.6 4 21V3C4 2.4 4.4 2 5 2H14L20 8V21C20 21.6 19.6 22 19 22ZM16 13.5L12.5 13V10C12.5 9.4 12.6 9.5 12 9.5C11.4 9.5 11.5 9.4 11.5 10L11 13L8 13.5C7.4 13.5 7 13.4 7 14C7 14.6 7.4 14.5 8 14.5H11V18C11 18.6 11.4 19 12 19C12.6 19 12.5 18.6 12.5 18V14.5L16 14C16.6 14 17 14.6 17 14C17 13.4 16.6 13.5 16 13.5Z" fill="currentColor"></path>
+																	<rect x="11" y="19" width="10" height="2" rx="1" transform="rotate(-90 11 19)" fill="currentColor"></rect>
+																	<rect x="7" y="13" width="10" height="2" rx="1" fill="currentColor"></rect>
+																	<path d="M15 8H20L14 2V7C14 7.6 14.4 8 15 8Z" fill="currentColor"></path>
+																</svg></span>
+                                        {% endif %}
+                                        <div class="d-flex flex-column">
+                                            <h1 class="text-gray-800 fw-bold"><span style="color: #ED141F;">{{ firmDetail[0].fname}}  {{ firmDetail[0].lname }}</span> Request For document.</h1>
+                                        </div>
                                     </div>
-                                </form>
-                                <h1 class="text-dark mb-10">Document Hub</h1>
-                                <div class="table-responsive">
-                                    <table id="table"  class="table dt-table-hover" style="width:100%">
-                                        <thead>
-                                        <tr>
-                                            <th></th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-                                        </tbody>
-                                    </table>
+                                    <div class="mb-15">
+                                        <!--begin::Description-->
+                                        <div class="mb-15 fs-5 fw-normal text-gray-800">
+
+                                            <div class="mb-10">{{ documentHub[0].firm_des }}</div>
+                                            <!--end::Text-->
+                                            <!--begin::Code-->
+                                            <div class="row">
+                                            <div class="col-lg-12 text-center">
+                                                <a role="button" onclick="download_files('{{documentHub[0].document_id }}')"  class="btn btn-primary ">
+                                                    <!--begin::Svg Icon | path: icons/duotune/communication/com005.svg-->
+                                                    <span class="svg-icon svg-icon-2">
+													<i class="fa-solid fa-download"></i>
+												</span>
+                                                 Download File</a>
+                                            </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-0">
+                                            {% if documentHub[0].status != 'yes' %}
+                                            <form  method="post" id="DocumentForm" enctype="multipart/form-data">
+                                                <input type="hidden" name="firm_id" value="{{ documentHub[0].firm_id }}">
+                                                <input type="hidden" name="id" value="{{ documentHub[0].id }}">
+                                                <div class="row">
+                                                <div class="col-md-12">
+                                                    <p style="font-weight: bold">Please upload your document file along with a brief description to our Document Hub. This ensures proper organization and easy retrieval for future reference.</p>
+                                                </div>
+                                                    <div class="col-md-12">
+                                                    <div id="createInput"></div>
+                                                </div>
+                                                    <div class="col-md-12">
+                                            <textarea class="form-control form-control-solid placeholder-gray-600 fw-bolder fs-4 ps-9 pt-7" rows="6" id="firm_des" name="client_des" placeholder="Description"></textarea>
+                                            <button type="button"  name="add_new" id="btn-profile" onclick="send_document()" class="btn btn-primary mt-n20 mb-20 position-relative float-end me-7">Send</button>
+                                          </div>
+                                                </div>
+                                            </form>
+                                            {% endif %}
+                                        </div>
+                                    </div>
 
                                 </div>
-
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 
 
@@ -266,36 +308,6 @@
         </div>
         <!--end::Modal dialog-->
     </div>
-    <div class="modal fade" id="editExampleModal" tabindex="-1" aria-labelledby="editExampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg">
-            <div class="modal-content bg-white">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Send Document</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="btn-close"></button>
-                </div>
-                <form  method="post" id="DocumentForm" enctype="multipart/form-data">
-                    <input type="hidden" name="firm_id" value="{{ client[0].firm_id }}">
-                    <input type="hidden" name="id" id="id">
-                    <div class="modal-body">
-                        <div class="row p-1">
-                            <div class="col-md-12">
-                                <label class="form-label">Description</label>
-                                <textarea class="form-control" id="firm_des" name="client_des" placeholder="Description"></textarea>
-                            </div>
-                            <div class="col-md-12">
-                                <label for="upload_file" class="mb-2">Uploads</label>
-                                <div id="createInput"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button"  class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" name="add_new" id="btn-profile" class="btn btn-primary" onclick="send_document()">Send Document</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
     <div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="commentModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -320,55 +332,6 @@
     <script src="https://unpkg.com/filepond-plugin-file-validate-type/dist/filepond-plugin-file-validate-type.js"></script>
     <script src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
     <script>
-        $(document).ready(function () {
-            var csrf_token = $("input[name=csrf]").val();
-            var table = $('#table').dataTable({
-                "language": {
-                    processing: '<i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span> '
-                },
-                "responsive": true,
-                "bProcessing": true,
-                "sAjaxSource": "/user/api?page_name=view_document_hub_client&csrf="+csrf_token,
-                "bPaginate": true,
-                "sPaginationType": "full_numbers",
-                "iDisplayLength": 10,
-                "aoColumns": [
-                    {mData: 'viewDocs'},
-
-                ]
-            });
-            $('#search').on('keyup', function() {
-                $('#table').DataTable().search(this.value).draw();
-            });
-        });
-        function userStatus(userID) {
-                var currStatus= "1";
-
-            var el = this;
-            $(this).html('<i class="fa fa-circle-o-notch fa-spin"></i> loading...');
-            var csrf_token = $("input[name=csrf]").val();
-            $.ajax({
-                url: '/user/api',
-                type: 'GET', data: {
-                    id: userID,
-                    status: currStatus,
-                    page_name: "DocStatusUpdate",
-                    table_name:"document_hub",
-                    status_table:"see_doc",
-                    csrf: csrf_token
-                }, success: function (data) {
-                    if (data['statusCode'] == "1") {
-                        $('#table').DataTable().ajax.reload(null, false);
-                        window.location="/client/dochubdetails/"+data['id'];
-                    } else {
-                        toastr.error('Something went wrong.');
-
-                    }
-                }
-
-            });
-        }
-
         document.addEventListener('DOMContentLoaded', function () {
             FilePond.registerPlugin(
                 FilePondPluginFileValidateSize,
@@ -416,23 +379,16 @@
                         console.log(data);
                         pond.removeFiles();
                         if(data == '1'){
-                            $('#editExampleModal').modal('hide');
                             document.getElementById("DocumentForm").reset();
-                            $('#table').DataTable().ajax.reload(null, false);
                             toastr.success('Document Sent');
+                            window.location="/client/document";
                         } else if (data == '2'){
-                            $('#table').DataTable().ajax.reload(null, false);
                             toastr.error('Please Upload File');
                         } else {
-                            $('#table').DataTable().ajax.reload(null, false);
                         }
                     }
                 });
             }
-        });
-        $('body').on('click', '.edit', function () {
-            var id = $(this).data('id');
-            $("#id").val(id);
         });
         function download_files(document_id) {
             var csrf_token = $("input[name=csrf]").val();
